tests/instantiating/atomic_invalid_type/stderr.golden
error: atomic property must be of type bool, current type time
bus.fbd +3:14
   |
 3 |     atomic = 10 ns
   |              ^^^^^
